tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" bytes=146
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" line=9 column=10 end_line=9 end_column=15 byte_start=137 byte_end=142 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari:9:10\n   |\n 9 |   return token;\n   |          ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari" line=7 column=7 end_line=7 end_column=12 byte_start=90 byte_end=95 message="binding 'token' was declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-use-after-move.ari:7:7\n   |\n 7 |   let token: own i64 = 7;\n   |       ^^^^^"
  Note index=0 location=none message="ownership state is tracked after moves, drops, and control-flow joins"
  Help index=0 location=none message="move this use before the move of 'token' or bind a fresh value"
